--- a/package.json
+++ b/package.json
@@ -37,9 +37,10 @@
   "dependencies": {
     "backbone": "^1.3.3",
     "jquery": "^2.2.4",
-    "layoutmanager": "^0.9.7",
     "mocha": "^3.2.0",
     "purecss": "^0.6.2",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "ractive": "^0.8.12",
+    "ractive-adaptors-backbone": "^0.3.0"
   }
 }
